@@ -5,3 +5,4 @@ Felix Chang <changfkk@dds.nl>
 James H. Cloos, jr. <cloos@jhcloos.com>
 Michael Gruber <Gruber@Mathematik.HU-Berlin.DE>
 Tom Kacvinsky <tjk@ams.org>
+Johan Vromans <jvromans@squirrel.nl>
