@@ -1,3 +1,8 @@
+1999-07-23  Dieter Baron  <dillo@danbala.tuwien.ac.at>
+
+	* open_font.c (open_font): fall back to full_name if ps name not
+	defined.  [patch by Johan Vromans]
+
 1999-05-05  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
 	* main.c (find_cid): implemented searching (was dummy function).
